--- a/src/components/charInfo/charInfo.scss
+++ b/src/components/charInfo/charInfo.scss
@@ -2,6 +2,7 @@
 
 .char {
     &__info {
+        border-radius: 20px;
         padding: 25px;
         box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
         position: relative;
@@ -63,3 +64,18 @@
     }
 
 }
+.my-node-enter {
+    transform:translateX(-100%) scale(0.8);
+
+  }
+  .my-node-enter-active {
+    transition: all 500ms;
+    transform:translateX(0%) scale(1);
+  }
+  .my-node-exit {
+    transition: all 500ms;
+  }
+  .my-node-exit-active {
+    transform:translateX(-100%) rotate(60deg);
+    transition: all 500mss;
+  }
