--- a/src/components/pages/charPage.scss
+++ b/src/components/pages/charPage.scss
@@ -3,14 +3,15 @@
         display: grid;
         grid-template-columns: 293px 550px auto;
         column-gap: 50px;
-        &__name{
-            margin-bottom: 25px;
-            font-size: 28px;
-            line-height: 21px;
-        }
         &__descr{
+
             font-size: 18px;
-            line-height: 21px;
+            margin-top: 25px;
+        }
+        &__name{
+            font-weight:bold;
+            font-size: 28px;
+            color: #000000;
         }
     }
 }
@@ -18,19 +19,23 @@ img{
     max-width: 290px;
     max-height: 290px;
 }
-.my-node1-enter {
+.link-back{
+    color: rgba(255, 0, 0, 0.699);
+    font-weight:bold;
+}
+.my-char-enter {
     opacity: 0;
-    transform: scale(0.4);
+    transform: scale(0.3);
   }
-  .my-node1-enter-active {
+  .my-char-enter-active {
     transition: all 500ms;
     opacity: 1;
     transform: scale(1);
   }
-  .my-node1-exit {
+  .my-char-exit {
     transition: all 500ms;
   }
-  .my-node1-exit-active {
+  .my-char-exit-active {
     opacity: 1;
     transition: all 500ms;
   }
